@@ -135,6 +135,7 @@ else {
 
 	//form
 	print "<form name='scan-snmp-arp-form' class='scan-snmp-arp-form'>";
+	print "<input type='hidden' name='csrf_cookie' value='$csrf'>";
 	print "<table class='table table-striped table-top table-condensed'>";
 
 	// titles
@@ -171,7 +172,6 @@ else {
     		print "	<input type='text' class='form-control input-sm' name='description$m'>";
     		print "	<input type='hidden' name='ip$m' value='$ip[ip]'>";
     		print "	<input type='hidden' name='device$m' value='$deviceid'>";
-    		print " <input type='hidden' name='csrf_cookie' value='$csrf'>";
     		print "</td>";
     		// mac
     		print "<td>";
