@@ -50,6 +50,7 @@
     + Increase allowed email and password lengths (#3021);
     + Wrong unit location for dual-sided racks (#3086);
     + Linked ip_addr shows integer notation (#3100);
+    + Invalid scan type () error (#2785);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
         + Address IP field not displayed when using filter_by (#2934);
